--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'NHaasGroteskDSPro-65Md' !important;
+  font-family: "Space Grotesk", sans-serif !important;
 }
 
 code {
@@ -14,5 +16,5 @@ code {
 }
 
 #carousel {
-  max-height: 500px;
+  max-height: 565px;
 }
